--- a/index.html
+++ b/index.html
@@ -388,6 +388,13 @@
                     <span class="editable" contenteditable="false">Be yourself :></span>
                 </div>
             </div>
+            <div class="info-item">
+                <div class="info-icon">🗒</div>
+                <div class="info-label">Note:</div>
+                <div class="info-value">
+                    <span class="editable" contenteditable="false">Chỉ cần mang mũ bảo hiểm còn lại để toi lo</span>
+                </div>
+            </div>
         </div>
 
         <div class="activities-section">
